# numonet-modems

./: CMakeLists.txt  configure.sh
include/: modem.h  serial.h
src/: main.cpp  modem.cpp  serial.cpp
